--- a/Mobile/汇总/1.ArkTS vs TypeScript (1).md
+++ b/Mobile/汇总/1.ArkTS vs TypeScript (1).md
@@ -102,7 +102,9 @@ B. 强制使用静态类型
 C. 禁止在运行时变更对象布局
 D. 以上都是强制要求的
 
-答案：[详见从TypeScript到ArkTS适配规则]()
+答案：D
+
+[详见从TypeScript到ArkTS适配规则]()
 
 **11. ArkTS是哪种操作系统的优选主力应用开发语言？**
 
@@ -207,4 +209,3 @@ D. 以上都是不支持的
 答案：D
 
 [详见从TypeScript到ArkTS适配规则]()
-
