--- a/Mobile/汇总/2变量和常量、类、接口、容器类库 (2).md
+++ b/Mobile/汇总/2变量和常量、类、接口、容器类库 (2).md
@@ -12,7 +12,7 @@
    C. 除了下划线 _ 和美元 $ 符号外，不能包含其他特殊字符，包括空格。
    D. 变量名能以数字开头。
    答案：ABC（不能使用关键字和保留字，已经定义了特殊含义的单词）
-3. 在ArkTS语言中想要生命引入只读常量需要怎么做？
+3. 在ArkTS语言中想要声明引入只读常量需要怎么做？
    A. const hello: string = "hello"
    B. let hi: string = "hello"
    C. let hi = "hello"
@@ -120,4 +120,3 @@
     C. LightWeightMap依据泛型定义，采⽤轻量级结构，初始默认容量大小为16
     D. HashMap底层使⽤数组+链表+红⿊树的⽅式实现
     答案：BD（参考PPt"12-HarmonyOS开发中级篇"P16）
-
